tests/neg/i8632.scala
object Test {
  Nil.toString.foo(1) // error
}